# ardrone_archive_aarons_laptop

./: .gitignore  .lvimrc  CMakeLists.txt  CONTRIBUTORS.txt  COPYING.txt  Makefile  README.rst  ac622App.py  compile-native-linux.sh  compile-native-mingw-win32.sh  demo1.py  demo2.py  demo3.py  demo_height_control_500.py  gui.py  image_processing_test1 (1).py  image_processing_test1_corresp  image_processing_test1_corresp.py  keybdcontrol.py  mingw-toolchain.cmake  qtdronegui.py  qtdronevideo.py  qtdronevideo_box_detect.py  qtdronevideo_box_detect_figure_8.py  qtdronevideo_box_detect_imaging  qtdronevideo_box_detect_imaging.py  qtdronevideo_box_detect_move_stop  qtdronevideo_box_detect_move_stop.py  qtdronevideo_box_detect_ping_pong  qtdronevideo_box_detect_ping_pong.py  qtdronevideo_box_detect_ping_pong_state _constant_correction.py  qtdronevideo_box_detect_ping_pong_state.py  qtdronevideo_box_detect_ping_pong_state_outsd  qtdronevideo_box_detect_ping_pong_v.py  qtdronevideo_box_detect_ping_pong_vision.py  qtdronevideo_testing  qtdronevideo_testing.py  recognition_test.py  setup.py  test_cng22.py  (+2 more)
Square_detection_and_avoidance/: qtdronevideo_box_detect.py
ac622-control_characterisation/: Logger.py  __init__.py  impulse_response.py
ardrone/: __init__.py  aruco.py  atcommands.py  config.py  connection.py  controlloop.py  dummy.py  dummydrone.py  native.py  platform.py  udpechoserver.py
argui/: app.py  main_window.ui
caruco/: CMakeLists.txt  caruco.cpp  caruco.h
controllers/: __init__.py
doc/: architecture.rst  aruco.rst  conf.py  control.rst  controllers.rst  (+6 more)
(+152 files in other folders)
